# asyncsocks5

./: .gitignore  README.md  pyproject.toml  setup.py
asyncsocks5/: __init__.py  main.py  parser.py  rfc1928.py
tests/: test_parser.py
